# firefox-to-sqlite

./: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
docs/: conf.py  index.md  install.md  usage.md
firefox_to_sqlite/: cli.py  lib.py
tests/: conftest.py  test_cli.py  test_lib.py
tests/config/: places_schema.sql
